bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:2: error: not found: value ||
  if (n>90 && n<110) || (n>=190 && n<=210){
                     ^